# tumbl-three-viewer

./: .gitignore  Cargo.toml  Makefile  README.md  nginx.conf  serve.cmd
.github/workflows/: rust.yml
index/: index.html
nginx/: mime.types  nginx.conf
script/: script.js  style.css
src/: index.html  json_parser.rs  main.rs  model.rs  script.js  style.css  text_parser.rs  utils.rs
