[package]
name = "tumbl-three-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
mime = "0.3.16"
once_cell = "1.16.0"
open = "3.2.0"
regex = "1.7.0"
rust-embed = { version = "6.4.2", features = ["debug-embed"] }
scraper = "0.14.0"
serde = { version = "1.0.151", features = ["derive"] }
tempfile = "3.3.0"
tokio = { version = "1", default-features = false, features = ["macros", "signal"] }
