[package]
name = "tumbl-three-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
enum-iterator = "1.4.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
lol_html = "0.3.3"
mime = "0.3.16"
once_cell = "1.16.0"
open = "3.2.0"
regex = "1.7.0"
rust-embed = { version = "6.4.2", features = ["debug-embed"] }
scraper = "0.14.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1", default-features = false, features = ["macros", "signal"] }
